--- a/up_todo/pubspec.yaml
+++ b/up_todo/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
   flutter_svg: ^2.0.10+1
+  provider: ^6.1.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
