--- a/flutter_tutorial/pubspec.yaml
+++ b/flutter_tutorial/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   kartal: ^3.5.0
+  shared_preferences: ^2.2.2
+  dio: ^5.4.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
