--- a/up_todo/pubspec.yaml
+++ b/up_todo/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   provider: ^6.1.1
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  dio: ^5.4.1
+  multiple_result: ^5.1.0
+  google_fonts: ^6.2.0
 
 dev_dependencies:
   flutter_test:
