--- a/up_todo/pubspec.yaml
+++ b/up_todo/pubspec.yaml
@@ -43,11 +43,13 @@ dependencies:
   dio: ^5.4.1
   multiple_result: ^5.1.0
   google_fonts: ^6.2.0
-
+  another_flushbar: ^1.12.30
+  json_annotation: ^4.8.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.4.9
+  json_serializable: ^6.7.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -69,6 +71,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Images/
+    - assets/Icons/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
