--- a/up_todo/android/app/build.gradle
+++ b/up_todo/android/app/build.gradle
@@ -23,6 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
+
     namespace "com.example.up_todo"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -41,6 +42,7 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.up_todo"
         // You can update the following values to match your application needs.
