--- a/up_todo/pubspec.yaml
+++ b/up_todo/pubspec.yaml
@@ -47,11 +47,18 @@ dependencies:
   json_annotation: ^4.8.1
   image_picker: ^1.0.8
   firebase_storage: ^11.7.1
+  cloud_firestore: ^4.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.9
   json_serializable: ^6.7.1
+  flutter_launcher_icons: "^0.13.1"
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/Icons/uptodo_logo.png"
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
